--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
 		"quotes": [
 			2, "single"
 		],
-		"no-unused-vars": ["error", { "vars": "all"}]
+		"no-unused-vars": ["error", { "vars": "all"}],
+		"semi": ["error", "always"]
 	}
 }
